2011-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed another genPointerGet() bug.

2011-04-10 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: dbuf-ized
	* src/SDCCglobl.h: sync with trunk

2011-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Cleaned up some leftover debug messages,
	  fixed assignment of lh to hl,
	  implemented exact cost for EXSTK to SFR assignment,
	  fixed genPointerGet() bug that made simplefloat regression tests fail.

2011-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Added warning in commitPair() for lh to hl assignment.

2011-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug that could result in slightly wrong cost function.

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* Merge from trunk
	* support/regression/tests/bug3166208.c: sync with trunk

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c, src/z80/ralloc2.cc:
	  changed with the Philipp's version from his private
	  sdcc-or-2011-4-8 branch; fixed MSVC 2010 compilation
	* src/SDCCicode.c: dbuf_detach() replaced with dbuf_destroy()
	* support/regression/ports/ucz80/spec.mk:
	  added --optralloc-exact-cost to SDCCFLAGS

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/cmd.src/cmdpars.y: removed warnings

2011-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Fixed bug that allowed old register allocator to use IY even when the new one does, too,
	  which led to conflicts in the assignment.

2011-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/SDCCpeeph.c,
	  src/z80/main.c,
	  src/z80/peep.h,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Added new peephole function notUsedFrom() to check for variable uses starting from label,
	  added it as condition in peepholes where appropriate, modified notUsed()
	  peephole function to not rely on first argument being constant or %1.
